added intrest section

--- a/index.html
+++ b/index.html
@@ -27,18 +27,38 @@
       <div class="container">
         <div class="row">
           <div class="col-5 mt-4 landtxt">
-<<<<<<< HEAD
-
-=======
             <h1>NEED FOR</h1>
             <h2>SPEED</h2>
->>>>>>> 3ac84062f416d4cd22ccb50714cae3b8d6a1917d
           </div>
         </div>
       </div>
     </div>
 
-    <!-- About section -->
+    <!-- interest section -->
+    <div class="interest">
+
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+              <div class="card mb-3 mr0" >
+                  <div class="row no-gutters">
+                    <div class="col-md-4">
+                      <img src="images/interest.jpeg" class="card-img" alt="interest" >
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body kardbody">
+                        <h5 class="card-title heading">Be part of something </h5>
+                        <p class="card-text">Are you interested in becoming part of something bigger and better? If so, we invite you to explore our website and chat with some of our club members, and if you feel that you are of the same mindset as us, and want something better in a car club, something better for your community, for your family and for yourself, then we encourage you to be an a affiliate — we’d enjoy for you to become part of the team.</p>
+                        <p class="card-text"><small class="text-muted">DST-KENYA TEAM</small></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Registration -->
     <div class="registration">
@@ -75,14 +95,14 @@
                     <i class="fas fa-wrench fa-2x orange"></i>
                     <input type="text" placeholder="Vehicle" class="  m-4" />
                     <br />
-                    <button type="button" class="btn">Race</button>
+                    <a href="race.html"><button type="button" class="btn">Race</button></a>
                   </form>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-5">
-            <img src="images/register.jpg" alt="globe" class="img-fluid" />
+            <div class="Rimg"></div>
           </div>
         </div>
       </div>
