--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <!-- About section -->
         <div class="about" id="about">
           <p>
-            DST-KENYA is a website of competitive sporting events for
-            adrenaline junkies, <br />
+            DST-KENYA is a website of competitive sporting events for adrenaline
+            junkies, <br />
             which primarily involves the use of motorised Vehicles <br />
             (enclosed-4-wheel), for racing in three categories: <br />
             <li>CIRCUIT RACE</li>
