fixed size of interest card

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <div class="card mb-3 mr0">
+            <div class="card  mr0">
               <div class="row no-gutters">
                 <div class="col-md-4">
                   <img
                     src="images/interest.jpeg"
                     class="card-img"
                     alt="interest"
+                    height="310vh"
                   />
                 </div>
                 <div class="col-md-8">
@@ -61,7 +62,7 @@
                       be an a affiliate — we’d enjoy for you to become part of
                       the team.
                     </p>
-                    <p class="card-text">
+                    <p class="card-text mute">
                       <small class="text-muted">DST-KENYA TEAM</small>
                     </p>
                   </div>
