Row for Drag races added and inputs for time;race location ;images; laps are zero

--- a/race.html
+++ b/race.html
@@ -138,7 +138,58 @@
                     </div>
                 </div>
             </div>
-            
+
+            <!-- row for drag RACES -->
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                    <img src="images/dkihunguro.png" width="400" height="200">
+                    <p> name:Piu mosso <br>
+                        10 km; <br>
+                        laps: 0<br>
+                        location: Kihunguro <br>
+                        time: 2200hr
+                    </p>
+                    <!-- buttons arent working got from bootstrap cheat-->
+                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                        data-placement="bottom" data-content="be there in 30 min to race time">
+                        register
+                    </button>
+                    </div>
+    
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                    <img src="images/drunda.png" width="400" height="200">
+                    <p> name:adagio<br>
+                        10 km; <br>
+                        laps: 0<br>
+                        location: Runda<br>
+                        time: 2300hr
+                    </p>
+                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                        data-placement="bottom" data-content="be there in 30 min to race time">
+                        register
+                    </button>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                    <img src="images/druiru.png" width="400" height="200">
+                    <p> name:grazioso <br>
+                        10km; <br>
+                        laps: 0<br>
+                        location: Ruiru<br>
+                        time: 2400hr
+                    </p>
+                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                        data-placement="bottom" data-content="be there in 30 min to race time">
+                        register
+                    </button>
+                    </div>
+                </div>
+            </div>
+
 </body>
 
 </html>
