--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
           <div class="col-5 mt-4 landtxt">
             <h1>NEED FOR</h1>
-            <h2>SPEED</h2>
+            <h2 class="shake">SPEED</h2>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
                 <div class="col-md-4">
                   <img
                     src="images/interest.jpeg"
-                    class="card-img"
+                    class="card-img "
                     alt="interest"
                     height="310vh"
                   />
@@ -62,7 +62,7 @@
                       be an a affiliate — we’d enjoy for you to become part of
                       the team.
                     </p>
-                    <p class="card-text mute">
+                    <p class="card-text ">
                       <small class="text-muted">DST-KENYA TEAM</small>
                     </p>
                   </div>
