button names changed from register to RACE

--- a/race.html
+++ b/race.html
@@ -55,7 +55,7 @@
                 <!-- buttons arent working got from bootstrap cheat-->
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                     data-placement="bottom" data-content="be there in 30 min to race time">
-                    register
+                    RACE
                 </button>
                 </div>
 
@@ -70,7 +70,7 @@
                 </p>
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                     data-placement="bottom" data-content="be there in 30 min to race time">
-                    register
+                    RACE
                 </button>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 </p>
                 <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                     data-placement="bottom" data-content="be there in 30 min to race time">
-                    register
+                    RACE
                 </button>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <!-- buttons arent working got from bootstrap cheat-->
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                         data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
+                        RACE
                     </button>
                     </div>
     
@@ -118,7 +118,7 @@
                     </p>
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                         data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
+                        RACE
                     </button>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     </p>
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                         data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
+                        RACE
                     </button>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                     <!-- buttons arent working got from bootstrap cheat-->
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                         data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
+                       RACE 
                     </button>
                     </div>
     
@@ -169,7 +169,7 @@
                     </p>
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                         data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
+                        RACE
                     </button>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                     </p>
                     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
                         data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
+                        RACE
                     </button>
                     </div>
                 </div>
