names for races in drag races changed

--- a/race.html
+++ b/race.html
@@ -144,7 +144,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/dkihunguro.png" width="400" height="200">
-                    <p> name:Piu mosso <br>
+                    <p> name:Royce Rollers <br>
                         10 km; <br>
                         laps: 0<br>
                         location: Kihunguro <br>
@@ -161,7 +161,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/drunda.png" width="400" height="200">
-                    <p> name:adagio<br>
+                    <p> name:Sky Walker<br>
                         10 km; <br>
                         laps: 0<br>
                         location: Runda<br>
@@ -176,7 +176,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/druiru.png" width="400" height="200">
-                    <p> name:grazioso <br>
+                    <p> name:Karl King <br>
                         10km; <br>
                         laps: 0<br>
                         location: Ruiru<br>
