--- a/race.html
+++ b/race.html
@@ -20,7 +20,7 @@
                 <div class="drag">
                     <div class="card">
                         <img class="card-img-top" src="images/drag1.jpeg" alt="Card image cap" width="500" height="300" />
-                        <div class="card-body">drag racing</div>
+                        <div class="card-body">DRAG RACING</div>
                     </div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                 <div class="sprint">
                     <div class="card">
                         <img class="card-img-top" src="images/sprint8.jpeg" alt="Card image cap" width="500" height="300"/>
-                        <div class="card-body">sprint racing</div>
+                        <div class="card-body">SPRINT RACING</div>
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 <div class="circuit">
                     <div class="card">
                         <img class="card-img-top" src="images/circuit2.jpeg" alt="Card image cap" width="500" height="300"/>
-                        <div class="card-body">circuit racing</div>
+                        <div class="card-body">CIRCUIT RACING</div>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="col-md-4">
                 <div class="card">
                 <img src="images/ssyokimau.png" width="400" height="200">
-                <p> name:aderal <br>
+                <p> Name:Aderal <br>
                     10km; <br>
                     location: Malili<br>
                     time:0300hr
@@ -63,7 +63,7 @@
             <div class="col-md-4">
                 <div class="card">
                 <img src="images/sroysambu.png" width="400" height="200">
-                <p> name:lasertan <br>
+                <p> Name:Lasertan <br>
                     10km; <br>
                     location: Roysambu <br>
                     time:2400hr
@@ -77,7 +77,7 @@
             <div class="col-md-4">
                 <div class="card">
                 <img src="images/slimuru.png" width="400" height="200">
-                <p> name:warfarin <br>
+                <p> Name:Warfarin <br>
                     10km; <br>
                     location: Imara Dima<br>
                     time: 0100hr
@@ -93,7 +93,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/crace3.jpeg" width="400" height="200">
-                    <p> name:Piu mosso <br>
+                    <p> Name:Piu Mosso <br>
                         15 km; <br>
                         laps: 2<br>
                         location: Junction <br>
@@ -110,7 +110,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/crace.jpeg" width="400" height="200">
-                    <p> name:adagio<br>
+                    <p> Name:Adagio<br>
                         30 km; <br>
                         laps: 3<br>
                         location: Pangani<br>
@@ -125,7 +125,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/crace1.jpeg" width="400" height="200">
-                    <p> name:grazioso <br>
+                    <p> Name:Grazioso <br>
                         40km; <br>
                         laps: 3<br>
                         location: Peponni<br>
@@ -144,7 +144,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/dkihunguro.png" width="400" height="200">
-                    <p> name:Royce Rollers <br>
+                    <p> Name:Royce Rollers <br>
                         10 km; <br>
                         laps: 0<br>
                         location: Kihunguro <br>
@@ -161,7 +161,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/drunda.png" width="400" height="200">
-                    <p> name:Sky Walker<br>
+                    <p> Name:Sky Walker<br>
                         10 km; <br>
                         laps: 0<br>
                         location: Runda<br>
@@ -176,7 +176,7 @@
                 <div class="col-md-4">
                     <div class="card">
                     <img src="images/druiru.png" width="400" height="200">
-                    <p> name:Karl King <br>
+                    <p> Name:Karl King <br>
                         10km; <br>
                         laps: 0<br>
                         location: Ruiru<br>
