added id for h1

--- a/race.html
+++ b/race.html
@@ -14,7 +14,7 @@
 <body>
     
     <div class="cointainer"><!-- the card body images arent sime size change size of image-->
-        <h1>RACES</h1>
+        <h1 id="rh">RACES</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="drag">
