added a div class paganni to be used for font styling

--- a/race.html
+++ b/race.html
@@ -43,51 +43,49 @@
         </div>
 
         <!-- sprint racing  without pics from kraft dont know whether to include the card body effect or just this skeleton format-->
-        <div class="row">
-            <div id="paganni">
-                <div class="col-md-4">
-                    <div class="card">
-                    <img src="images/ssyokimau.png" width="430" height="350">
-                    <p> name:aderal <br>
-                        10km; <br>
-                        location: Malili<br>
-                        time:0300hr
-                    </p>
-                    <!-- buttons arent working got from bootstrap cheat-->
-                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
-                        data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
-                    </button>
-                    </div>
+        <div class="row" id="paganni">
+            <div class="col-md-4">
+                <div class="card">
+                <img src="images/ssyokimau.png" width="430" height="350">
+                <p> name:aderal <br>
+                    10km; <br>
+                    location: Malili<br>
+                    time:0300hr
+                </p>
+                <!-- buttons arent working got from bootstrap cheat-->
+                <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                    data-placement="bottom" data-content="be there in 30 min to race time">
+                    register
+                </button>
+                </div>
 
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                <img src="images/sroysambu.png" width="430" height="350">
+                <p> name:lasertan <br>
+                    10km; <br>
+                    location: Roysambu <br>
+                    time:2400hr
+                </p>
+                <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                    data-placement="bottom" data-content="be there in 30 min to race time">
+                    register
+                </button>
                 </div>
-                <div class="col-md-4">
-                    <div class="card">
-                    <img src="images/sroysambu.png" width="430" height="350">
-                    <p> name:lasertan <br>
-                        10km; <br>
-                        location: Roysambu <br>
-                        time:2400hr
-                    </p>
-                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
-                        data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
-                    </button>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                    <img src="images/slimuru.png" width="430" height="350">
-                    <p> name:warfarin <br>
-                        10km; <br>
-                        location: Imara Dima<br>
-                        time: 0100hr
-                    </p>
-                    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
-                        data-placement="bottom" data-content="be there in 30 min to race time">
-                        register
-                    </button>
-                    </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                <img src="images/slimuru.png" width="430" height="350">
+                <p> name:warfarin <br>
+                    10km; <br>
+                    location: Imara Dima<br>
+                    time: 0100hr
+                </p>
+                <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
+                    data-placement="bottom" data-content="be there in 30 min to race time">
+                    register
+                </button>
                 </div>
             </div>
         </div>
