--- a/race.html
+++ b/race.html
@@ -49,7 +49,7 @@
                 <img src="images/ssyokimau.png" width="430" height="350">
                 <p> name:aderal <br>
                     10km; <br>
-                    location: Malili<br>
+                    locationo be used for font styling: Malili<br>
                     time:0300hr
                 </p>
                 <!-- buttons arent working got from bootstrap cheat-->
