--- a/race.html
+++ b/race.html
@@ -53,7 +53,10 @@
                                     <img src="images/ssyokimau.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">ADERAL</h5>
-                                      <p class="card-text">FIRST SPRINT.</p>
+                                      <p class="card-text"> FIRST SPRINT.<br>
+                                                            10km<br>
+                                                            location: <br>
+                                                            time: <br></p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                   </div>
