add craces pics

--- a/race.html
+++ b/race.html
@@ -67,7 +67,11 @@
                                     <img src="images/sroysambu.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">LASER TAG</h5>
-                                      <p class="card-text">SECONDSPRINT</p>
+                                      <p class="card-text"> SECONDSPRINT <br>
+                                                            10km<br>
+                                                            location:<br>
+                                                            time:<br>
+                                      </p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                   </div>
@@ -79,7 +83,11 @@
                                     <img src="images/slimuru.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">WARFARIN</h5>
-                                      <p class="card-text">THIRD SPRINT.</p>
+                                      <p class="card-text"> THIRD SPRINT.<br>
+                                                            10km<br>
+                                                            location<br>
+                                                            time:<br>
+                                      </p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                   </div>
@@ -95,10 +103,15 @@
                     <!-- first Circuit -->
                     <div class="col-4">
                             <div class="card" style="width: 18rem;">
-                                    <img src="images/crace.jpeg" class="card-img-top" alt="...">
+                                    <img src="images/crace4.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">PIU MOSSO</h5>
-                                      <p class="card-text">FIRST CIRUIT</p>
+                                      <p class="card-text"> FIRST CIRUIT<br>
+                                                            15km<br>
+                                                            location:<br>
+                                                            time:<br>
+                                                            laps:2<br>
+                                    </p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                   </div>
@@ -106,10 +119,16 @@
                     <!-- second circuit -->
                     <div class="col-4">
                             <div class="card" style="width: 18rem;">
-                                    <img src="images/crace1.jpeg" class="card-img-top" alt="...">
+                                    <img src="images/crace5.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">ADAJIO</h5>
-                                      <p class="card-text">SECOND CIRCUIT.</p>
+                                      <p class="card-text"> SECOND CIRCUIT.<br>
+                                                            20km<br>
+                                                            location:<br>
+                                                            time:<br>
+                                                            laps:2<br>
+
+                                      </p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                   </div>
@@ -117,10 +136,16 @@
                     <!-- third circuit -->
                     <div class="col-4">
                             <div class="card" style="width: 18rem;">
-                                    <img src="images/crace3.jpeg" class="card-img-top" alt="...">
+                                    <img src="images/crace7.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">GRAZIOSO</h5>
-                                      <p class="card-text">THIRD.</p>
+                                      <p class="card-text"> THIRD CIRCUIT.<br>
+                                                            30km<br>
+                                                            location:<br>
+                                                            time:<br>
+                                                            laps:3<br>
+
+                                      </p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                   </div>
