changes to the image

--- a/race.html
+++ b/race.html
@@ -46,7 +46,7 @@
         <div class="row" id="paganni">
             <div class="col-md-4">
                 <div class="card">
-                <img src="images/ssyokimau.png" width="430" height="350">
+                <img src="images/ssyokimau.png" style= "width:100%" height="350">
                 <p> name:aderal <br>
                     10km; <br>
                     locationo be used for font styling: Malili<br>
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                <img src="images/sroysambu.png" width="430" height="350">
+                <img src="images/sroysambu.png" style= "width:100%" height="350">
                 <p> name:lasertan <br>
                     10km; <br>
                     location: Roysambu <br>
@@ -76,7 +76,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                <img src="images/slimuru.png" width="430" height="350">
+                <img src="images/slimuru.png" style= "width:100%" height="350">
                 <p> name:warfarin <br>
                     10km; <br>
                     location: Imara Dima<br>
@@ -92,7 +92,7 @@
         <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                    <img src="images/crace3.jpeg" width="430" height="350">
+                    <img src="images/crace3.jpeg" style= "width:100%" height="350">
                     <p> name:Piu mosso <br>
                         15 km; <br>
                         laps: 2<br>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                    <img src="images/crace.jpeg" width="430" height="350">
+                    <img src="images/crace.jpeg" style= "width:100%" height="350">
                     <p> name:adagio<br>
                         30 km; <br>
                         laps: 3<br>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                    <img src="images/crace1.jpeg" width="430" height="350">
+                    <img src="images/crace1.jpeg" style= "width:100%" height="350">
                     <p> name:grazioso <br>
                         40km; <br>
                         laps: 3<br>
