fixed img size for races

--- a/race.html
+++ b/race.html
@@ -88,11 +88,11 @@
         <!-- circuit -->
         <div class="circuit">
             <div class="container">
-                <div class="row">
+                <div class="row mt-4">
                     <!-- first Circuit -->
                     <div class="col-4">
                             <div class="card" style="width: 18rem;">
-                                    <img src="images/crace.jpeg" class="card-img-top" alt="...">
+                                    <img src="images/cirace3.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">PIU MOSSO</h5>
                                       <p class="card-text">FIRST CIRUIT</p>
@@ -103,7 +103,7 @@
                     <!-- second circuit -->
                     <div class="col-4">
                             <div class="card" style="width: 18rem;">
-                                    <img src="images/crace1.jpeg" class="card-img-top" alt="...">
+                                    <img src="images/cirace.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">ADAJIO</h5>
                                       <p class="card-text">SECOND CIRCUIT.</p>
@@ -114,7 +114,7 @@
                     <!-- third circuit -->
                     <div class="col-4">
                             <div class="card" style="width: 18rem;">
-                                    <img src="images/crace3.jpeg" class="card-img-top" alt="...">
+                                    <img src="images/cirace2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h5 class="card-title">GRAZIOSO</h5>
                                       <p class="card-text">THIRD.</p>
