add information of races

--- a/race.html
+++ b/race.html
@@ -55,8 +55,8 @@
                                       <h5 class="card-title">ADERAL</h5>
                                       <p class="card-text"> FIRST SPRINT.<br>
                                                             10km<br>
-                                                            location: <br>
-                                                            time: <br></p>
+                                                            location: malili<br>
+                                                            time:0300HR <br></p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                   </div>
@@ -69,8 +69,8 @@
                                       <h5 class="card-title">LASER TAG</h5>
                                       <p class="card-text"> SECONDSPRINT <br>
                                                             10km<br>
-                                                            location:<br>
-                                                            time:<br>
+                                                            location:roysambu<br>
+                                                            time:2400HR<br>
                                       </p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
@@ -85,8 +85,8 @@
                                       <h5 class="card-title">WARFARIN</h5>
                                       <p class="card-text"> THIRD SPRINT.<br>
                                                             10km<br>
-                                                            location<br>
-                                                            time:<br>
+                                                            location:imara daima<br>
+                                                            time:0100HR<br>
                                       </p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
@@ -108,8 +108,8 @@
                                       <h5 class="card-title">PIU MOSSO</h5>
                                       <p class="card-text"> FIRST CIRUIT<br>
                                                             15km<br>
-                                                            location:<br>
-                                                            time:<br>
+                                                            location:junction<br>
+                                                            time:0100HR<br>
                                                             laps:2<br>
                                     </p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -124,8 +124,8 @@
                                       <h5 class="card-title">ADAJIO</h5>
                                       <p class="card-text"> SECOND CIRCUIT.<br>
                                                             20km<br>
-                                                            location:<br>
-                                                            time:<br>
+                                                            location:pangani<br>
+                                                            time:0100HR<br>
                                                             laps:2<br>
 
                                       </p>
@@ -141,8 +141,8 @@
                                       <h5 class="card-title">GRAZIOSO</h5>
                                       <p class="card-text"> THIRD CIRCUIT.<br>
                                                             30km<br>
-                                                            location:<br>
-                                                            time:<br>
+                                                            location:peponi<br>
+                                                            time:0000HR<br>
                                                             laps:3<br>
 
                                       </p>
