--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- interest section -->
     <div class="interest">
-      <div class="container-fluid">
+      <div class="container-fluid mr0">
         <div class="row">
           <div class="col-12">
             <div class="card  mr0">
