--- a/race.html
+++ b/race.html
@@ -49,7 +49,7 @@
         <!-- sprint racing  without pics from kraft dont know whether to include the card body effect or just this skeleton format-->
         <!-- Sprint-->
         <div class="races">
-            <div class="sprint">
+            <div class="sprints">
                 <div class="container-fluid">
                     <div class="row">
                         <!-- first sprint -->
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <!-- circuit -->
-            <div class="circuit">
+            <div class="circuits">
                 <div class="container-fluid">
                     <div class="row mt-4">
                         <!-- first Circuit -->
