--- a/race.html
+++ b/race.html
@@ -208,7 +208,7 @@
             </div>
             </div>
 
-        <!-- circuit -->
+        <!-- DRUG -->
         <div class="drag">
             <div class="container-fluid">
                 <div class="row mt-4">
@@ -228,7 +228,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- second circuit -->
+                    <!-- second DRAG -->
                     <div class="col-4">
                         <div class="card" >
                             <img src="images/drunda.png" class="card-img-top" alt="...">
@@ -244,7 +244,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- third circuit -->
+                    <!-- third DRAG -->
                     <div class="col-4">
                         <div class="card" >
                         <img src="images/dkihunguro.png" class="card-img-top" alt="...">
